# webhook

./: .dockerignore  .gitignore  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  type.py
app/information/: __init__.py  melon.py
app/news/: __init__.py  api.py  asahi.py  nikkei.py  nishinippon.py
app/slack/: __init__.py  post.py
