[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
authors = ["Takeru Eto <takeru0219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slackweb = "^1.0.5"
bs4 = "^0.0.1"
requests = "^2.28.2"
types-requests = "^2.28.11.15"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
